# benchmark_project

./: .gitignore  CLAUDE.md  ENVIRONMENT.md  README.md  docker-compose.intel.yml  docker-compose.nvidia.yml  docker-compose.yml  main.py  pyproject.toml
benchmarks/: __init__.py  benchmark_runner.py
checks/: __init__.py  amd_driver.py  docker_check.py  gpu_check.py  gpu_detect.py  intel_check.py  nvidia_check.py  rocm_check.py
docker/: __init__.py  manager.py
scripts/: run_benchmark.sh
tests/: test_benchmark_runner.py  test_checks.py  test_cli_validation.py  test_data_loader.py  test_webui_config.py
webui/: __init__.py  app.py  config.py  data_loader.py
